// best practices: https://protobuf.dev/programming-guides/dos-donts/
edition = "2023";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// enable the new opaque api: https://protobuf.dev/reference/go/opaque-faq/
// import "google/protobuf/go_features.proto";
// option features.(pb.go).api_level = API_OPAQUE;


// ---------- identifiers for codecs on the wire ---------- //

// Subprotocol is used to identify the concrete encoding on the wire.
enum Subprotocol {
  UNKNOWN = 0;
  wasimoff_provider_v1_protobuf = 1; // binary messages with Protobuf encoding
  wasimoff_provider_v1_json     = 2; // text messages with JSON encoding
}


// ---------- "topmost" wrapped message format ---------- //

// Envelope is a generic message wrapper with a sequence counter and message type.
// The payload contains a { Request, Response, Event }.
message Envelope {

  // The sequence number is incremented for each message but Request and Event
  // count independently. Responses must always reuse the Request's sequence
  // number so they can be routed to the caller correctly.
  uint64 sequence = 1;

  // The message type indicates the payload contents: { Request, Response, Event }.
  MessageType type = 2;
  enum MessageType { UNKNOWN = 0; Request = 1; Response = 2; Event = 3; }

  // The presence of an error string indicates a fatal failure with a request.
  // Responses should encode specific errors within the payload, if possible.
  string error = 3;

  // The payload itself. Needs to be (un)packed with `anypb`.
  google.protobuf.Any payload = 4;

}


// ---------- individual message definitions ---------- //

// The Any payload can take literally any message and there is no Protobuf-enforced
// typing between the MessageType and the payload. Therefore you should make sure
// to name the Request and Result pairs absolutely clearly. Avoid using a generic
// response message for different requests, even if their fields are identical.


// The task message contains parameters to instantiate a task of a certain format
// and return the output upon successful execution. The Request and Response herein
// are the smallest unit of work that should be sent on the wire.
message Task {

  // Information about this task for identification and tracing.
  message Metadata {
    string id = 1; // unique identifier for this task
    string requester = 2; // who is requesting this task
    string provider = 3; // which provider executed this task
  }

  // Quality of Service (QoS) parameters for a given task.
  message QoS {
    bool priority = 1;
    google.protobuf.Timestamp deadline = 2;
    // TODO
  }

  // Event to terminate a running task on Provider.
  message Cancel {
    string id = 1; // unique identifier of the task
    string reason = 2; // freeform reason for logging
  }

  message Request {

    // "header"
    Metadata info = 1;
    QoS qos = 2;
    reserved 3 to 9;

    oneof parameters {
      Wasip1.Params wasip1 = 10;
      Pyodide.Params pyodide = 11;
    }

  }

  message Response {

    // "header"
    Metadata info = 1;
    reserved 3 to 9;

    oneof result {
      string error = 2;
      Wasip1.Result wasip1 = 10;
      Pyodide.Result pyodide = 11;
    }

  }

  //  WebAssembly System Interface (WASI), preview1
  // ===============================================
  message Wasip1 {

    // message Request {
    //   Metadata info = 1;
    //   QoS qos = 2;
    //   Params params = 3;
    // }

    // Contains necessary references and execution arguments to instantiate a single
    // WebAssembly task in a WASI preview 1 environment on the Provider.
    message Params {
      File binary = 1;
      repeated string args = 2;
      repeated string envs = 3;
      bytes stdin = 4;
      File rootfs = 5;
      repeated string artifacts = 6;
    }

    // message Response {
    //   Metadata info = 1;
    //   oneof result {
    //     string error = 2;
    //     Output ok = 3;
    //   }
    // }

    // The result of an execution from a Wasip1.Params message. It should only be
    // returned if the WebAssembly module was instantiated successfully at all.
    message Output {
      int32 status = 1;
      bytes stdout = 2;
      bytes stderr = 3;
      File artifacts = 4;
    }

    // Wrap a Wasip1.Output in a Result, which can be an Error or OK.
    message Result {
      oneof result {
        string error = 1;
        Output ok = 2;
      }
    }

  }


  //  Pyodide Python scripts
  // ========================
  message Pyodide {

    // message Request {
    //   Metadata info = 1;
    //   QoS qos = 2;
    //   Params params = 3;
    // }

    message Params {
      string script = 1;
      repeated string packages = 7;
      bytes pickle = 8;
      // repeated string args = 2; // TODO
      // repeated string envs = 3; // TODO
      // bytes stdin = 4; // TODO
      // File rootfs = 5; // TODO
      // repeated string artifacts = 6; // TODO
    }

    // message Response {
    //   Metadata info = 1;
    //   oneof result {
    //     string error = 2;
    //     Output ok = 3;
    //   }
    // }

    message Output {
      bytes pickle = 1;
      bytes stdout = 2;
      bytes stderr = 3;
      // File artifacts = 4;
    }

    // Wrap a Pyodide.Output in a Result, which can be an Error or OK.
    message Result {
      oneof result {
        string error = 1;
        Output ok = 2;
      }
    }

  }

}


// ---> filesystem

// File is a file reference with optional mime-type. The ref could be a plain
// filename, a prefixed hash digest or a URL to fetch from. When stored, a hash
// digest should be computed to have a stable identifier.
message File {
  string ref = 1; // filename, encoded digest or URL
  string media = 2; // media type in MIME notation
  bytes blob = 3; // the actual file contents
}

// FileListing asks for a listing of all available files on Provider
message FileListingRequest {
  // empty
}
message FileListingResponse {
  repeated string files = 1;
}

// FileProbe checks if a certain file exists on provider
message FileProbeRequest {
  string file = 1;
}
message FileProbeResponse {
  bool ok = 1;
}

// FileUpload pushes a file to the Provider.
message FileUploadRequest {
  File upload = 1;
}
message FileUploadResponse {
  string err = 1;
}

// FileDownload can be sent by the Provider to request a file download.
message FileDownloadRequest {
  string file = 1;
}
message FileDownloadResponse {
  File download = 1;
  string err = 2;
}


// ---> event messages

message Event {

  // GenericMessage is just a generic piece of text for logging
  message GenericMessage {
    string message = 1;
  }

  // ProviderHello is sent once at the beginning to identify the Provider
  message ProviderHello {
    string name = 1; // a logging-friendly name of the provider
    string useragent = 2; // like the navigator.useragent in browser
  }

  // ProviderResources is information about the available resources in Worker pool
  message ProviderResources {
    uint32 concurrency = 1; // maximum possible concurrency (~ number of Workers)
    uint32 tasks = 2; // currently active tasks
  }

  // ClusterInfo contains information about all connected Providers
  message ClusterInfo {
    uint32 providers = 1; // number of currently connected providers
  }

  // Throughput contains information about overall cluster throughput
  message Throughput {
    float overall = 1; // current overall tasks/s throughput
    float yours = 2; // your contribution (identified by name)
  }

  // CancelTask tells the Provider that it can terminate a task
  message CancelTask {
    string id = 1;
    string reason = 2;
  }

  // FileSystemUpdate notifies the Broker about changed files on the Provider.
  message FileSystemUpdate {
    repeated string added = 1;
    repeated string removed = 2;
  }

}


// ---------- client interface ---------- //

// The client interface specifies the messages that the offloading clients
// are expected to send. As a first step, they should just formalize the
// ad-hoc JSON structs that are already used, so at least the Broker can
// use pbjson to parse messages.

// These client requests will arrive on predefined routes, so a normal RPC
// library could be used and no Envelope wrapping is necessary.

message Client {

  // Jobs specify a simple parent-inheritance structure for each task format, so
  // multiple similar tasks can be sent efficiently in a single HTTP request.
  // There is no magic involved though: anything in the parent gets entirely
  // replaced by the corresponding fields in a task specification. Thus, at least
  // one task must always be present, even if just an empty { } with all
  // parameters inherited from the parent.
  message Job {

    message Wasip1Request {
      Task.Wasip1.Params parent = 1;
      repeated Task.Wasip1.Params tasks = 2;
    }

    message Wasip1Response {
      string error = 1;
      repeated Task.Wasip1.Result tasks = 2;
    }

    message PyodideRequest {
      Task.Pyodide.Params parent = 1;
      repeated Task.Pyodide.Params tasks = 2;
    }

    message PyodideResponse {
      string error = 1;
      repeated Task.Pyodide.Result tasks = 2;
    }

  }

}
